react-app-hoidanit

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -10,6 +10,10 @@
     position        : relative;
 
     .langugages {
+        .welcome {
+            margin-right: 18px;
+        }
+
         .language-vi {
             cursor    : pointer;
             // opacity: 0.5;
