--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -43,7 +43,7 @@
                 }
 
                 &.section-outstanding-doctor {
-                    background-image   : url('../../assets/speciatly/outstandingdoctor.jpg');
+                    // background-image   : url('../../assets/speciatly/outstandingdoctor.jpg');
                     background-size    : cover;
                     // border-radius   : 50%;
                     width              : 120px;
@@ -145,7 +145,9 @@
         border          : 2px solid #d7d7d7 !important;
     }
 
-
+    .slick-disabled {
+        display: none !important;
+    }
 
 }
 
