--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -18,7 +18,7 @@
 
 
         .section-customize {
-
+            cursor: pointer;
 
 
             .bg-image {
@@ -43,13 +43,11 @@
                 }
 
                 &.section-outstanding-doctor {
-                    // background-image   : url('../../assets/speciatly/outstandingdoctor.jpg');
-                    background-size    : cover;
-                    // border-radius   : 50%;
-                    width              : 120px;
-                    height             : 120px;
-                    margin             : 0 auto;
-                    border-radius      : 50%;
+                    background-size: cover;
+                    width          : 120px;
+                    height         : 120px;
+                    margin         : 0 auto;
+                    border-radius  : 50%;
                 }
 
                 &.section-handbook {
