udate-reactjs-hoidanit

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -20,7 +20,7 @@
 
             &.active {
                 opacity: 1;
-                color  : rgb(71, 70, 62);
+                color  : #260ea3;
             }
         }
 
