--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -21,6 +21,21 @@
         .content-right {
             width: 60%;
         }
+
+        .list-label {
+            label {
+                padding-left: 3px;
+            }
+        }
+    }
+
+    .more-infor-extra {
+        .list-label {
+            label {
+                padding-left: 3px;
+            }
+
+        }
     }
 
     .manage-doctor-editor {}
