--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -31,9 +31,15 @@
                 background-repeat  : no-repeat;
                 background-position: center center;
 
+                .img-specialty {
+                    width        : 100%;
+                    height       : 100%;
+                    border-radius: 10px;
+                }
+
                 &.section-specialty {
 
-                    background-image: url('../../assets/speciatly/tieu-hoa.png');
+                    // background-image: url('../../assets/speciatly/tieu-hoa.png');
 
                 }
 
@@ -50,10 +56,27 @@
                     border-radius  : 50%;
                 }
 
-                &.section-handbook {
+                &.section-handbook1 {
+                    background-image: url('../../assets/speciatly/camnang1.png');
+
+                }
+
+                &.section-handbook2 {
+                    background-image: url('../../assets/speciatly/camnang2.png');
+
+                }
+
+                &.section-handbook3 {
                     background-image: url('../../assets/speciatly/camnang3.png');
 
                 }
+
+            }
+
+            .name-specialty {
+                text-align : center;
+                font-size  : 20px;
+                font-weight: 600;
             }
         }
 
