add specialty to database

--- a/src/containers/System/Specialty/ManageSpecialty.scss
+++ b/src/containers/System/Specialty/ManageSpecialty.scss
@@ -27,14 +27,14 @@
     }
 
     .btn-add-specialty {
-        margin-top   : 20px;
-        margin-bottom: 30px;
-        border-radius: 3px;
-        outline      : none;
-        border       : none;
-        padding      : 5px;
-        background   : #191796;
-        cursor       : pointer;
-        color        : white;
+        margin-top      : 20px;
+        margin-bottom   : 30px;
+        border-radius   : 3px;
+        outline         : none;
+        border          : none;
+        padding         : 5px;
+        background      : orange;
+        cursor          : pointer;
+        // color        : white;
     }
 }
