--- a/src/containers/patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/patient/Doctor/DoctorSchedule.scss
@@ -3,7 +3,7 @@
     height      : 100%;
 
     .all-schedule {
-        padding: 20px 0 17px;
+        padding-bottom: 17px;
 
         select {
             border       : none;
@@ -76,7 +76,7 @@
 
             .book-free {
 
-                padding: 15px;
+                padding-top: 15px;
 
 
 
