--- a/src/containers/patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/patient/Doctor/DoctorSchedule.scss
@@ -59,6 +59,12 @@
                     outline      : none;
                     border-radius: 2px;
 
+                    button.booked {
+                        background-color: #ccc;
+                        cursor          : not-allowed;
+                        opacity         : 0.6;
+                    }
+
                     &:hover {
                         border: 2px solid #33b0e3;
                     }
@@ -93,4 +99,17 @@
     }
 
 
+}
+
+.btn-vie-detail {
+    &.booked {
+        background-color: #ccc;
+        cursor          : not-allowed;
+        opacity         : 0.7;
+
+        &:hover {
+            background-color: #ccc;
+            color           : #333;
+        }
+    }
 }
